Fix alignment and spacing of link. Closes https://github.com/owncast/owncast/issues/1482

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -263,6 +263,9 @@ section {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
+  margin: 1.5em;
+  margin-top: 10px;
 }
 
 .live-now-container {
